# codex-quota-monitor

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/release-notes/: default.md  v0.1.10.md  v0.1.8.md  v0.1.9.md
.github/workflows/: build.yml
docs/maintenance/: README.md  api-spec.md  architecture.md  db-spec.md  design-analysis.md  feature-spec.md  screen-spec.md  sequence-flow.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_logging.rs  lib.rs  main.rs  runtime.rs  types.rs
src-tauri/src/api/: usage.rs
src-tauri/src/auth/: codex_auth.rs  mod.rs  oauth_server.rs  storage.rs
src-tauri/src/commands/: account.rs  process.rs
src/components/: AccountCard.tsx  LogPanel.tsx  index.ts
src/hooks/: useAccounts.ts  useAppUpdate.ts
src/types/: index.ts
