[package]
name = "codex-quota-monitor"
version = "0.1.9"
description = "A desktop quota monitor and multi-account manager for Codex"
authors = ["Coang2623"]
edition = "2021"

[lib]
name = "codex_quota_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
tiny_http = "0.12"
webbrowser = "1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
thiserror = "2"
anyhow = "1"
urlencoding = "2"
futures = "0.3"
url = "2"
flate2 = "1"
chacha20poly1305 = "0.10"
pbkdf2 = "0.12"
